Fix Content Overlay not showing well on desktop & mobile

--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -1,3 +1,6 @@
+.Overlay {
+  @apply z-20
+}
 .Overlay h1 {
   @apply text-4xl my-4
 }
